--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -8,7 +8,7 @@ body {
 }
 body {
   display: flex;
-  /* align-items: center; */
+  align-items: center; 
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
@@ -34,4 +34,8 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+.contenedor{
+    display: grid;
+    grid-template-rows: 20% 20%;
 }
